// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default topic behavior 1`] = `
"{
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"root_Topic_18CB51FA\\": {
        \\"name\\": \\"Topic-c8228fb7\\"
      }
    }
  }
}"
`;

exports[`default topic behavior 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Topic": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "Topic",
                "path": "root/Default/Topic",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from queue name 1`] = `
"{
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"root_TheSpectacularTopic_460D3DDF\\": {
        \\"name\\": \\"The-Spectacular-Topic-c8252318\\"
      }
    }
  }
}"
`;

exports[`replace invalid character from queue name 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "The%Spectacular@Topic": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/The%Spectacular@Topic/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "The%Spectacular@Topic",
                "path": "root/Default/The%Spectacular@Topic",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`topic name valid 1`] = `
"{
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"root_TheSpectacularTopic01_2487D43E\\": {
        \\"name\\": \\"The-Spectacular_Topic-01-c828760a\\"
      }
    }
  }
}"
`;

exports[`topic name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "The-Spectacular_Topic-01": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/The-Spectacular_Topic-01/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "The-Spectacular_Topic-01",
                "path": "root/Default/The-Spectacular_Topic-01",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`topic with subscriber function 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { console.log(\\"Received: \\", event); }
};
})())({

})"
`;

exports[`topic with subscriber function 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_TopicOnMessagec5395e41_IamRole_9BB6BE88\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_TopicOnMessagec5395e41_IamRolePolicy_9F04C0AC\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessagec5395e41_IamRole_9BB6BE88.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_TopicOnMessagec5395e41_IamRolePolicyAttachment_763606DB\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessagec5395e41_IamRole_9BB6BE88.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_TopicOnMessagec5395e41_379EBC3E\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Topic-OnMessage-c5395e41-c8eb4431\\"
          }
        },
        \\"function_name\\": \\"Topic-OnMessage-c5395e41-c8eb4431\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessagec5395e41_IamRole_9BB6BE88.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_TopicOnMessagec5395e41_Code_97E7E354.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_TopicOnMessagec5395e41_S3Object_D172367F.key}\\",
        \\"timeout\\": 30
      }
    },
    \\"aws_lambda_permission\\": {
      \\"root_Topic_TopicTopicInvokePermissionc5395e41_58F47125\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_TopicOnMessagec5395e41_379EBC3E.function_name}\\",
        \\"principal\\": \\"sns.amazonaws.com\\",
        \\"source_arn\\": \\"\${aws_sns_topic.root_Topic_18CB51FA.arn}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_TopicOnMessagec5395e41_Code_97E7E354\\": {
        \\"bucket_prefix\\": \\"code-c8092503-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_TopicOnMessagec5395e41_S3Object_D172367F\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_TopicOnMessagec5395e41_Code_97E7E354.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sns_topic\\": {
      \\"root_Topic_18CB51FA\\": {
        \\"name\\": \\"Topic-c8228fb7\\"
      }
    },
    \\"aws_sns_topic_subscription\\": {
      \\"root_Topic_TopicTopicSubscriptionc5395e41_281A7990\\": {
        \\"endpoint\\": \\"\${aws_lambda_function.root_TopicOnMessagec5395e41_379EBC3E.arn}\\",
        \\"protocol\\": \\"lambda\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.root_Topic_18CB51FA.arn}\\"
      }
    }
  }
}"
`;

exports[`topic with subscriber function 3`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Handler": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Topic-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Topic": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "root/Default/Topic-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic/Default",
                  },
                  "Topic-TopicInvokePermission-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaPermission.LambdaPermission",
                      "version": "12.0.2",
                    },
                    "id": "Topic-TopicInvokePermission-c5395e41",
                    "path": "root/Default/Topic/Topic-TopicInvokePermission-c5395e41",
                  },
                  "Topic-TopicSubscription-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.snsTopicSubscription.SnsTopicSubscription",
                      "version": "12.0.2",
                    },
                    "id": "Topic-TopicSubscription-c5395e41",
                    "path": "root/Default/Topic/Topic-TopicSubscription-c5395e41",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "Topic",
                "path": "root/Default/Topic",
              },
              "Topic-OnMessage-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "root/Default/Topic",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Topic-OnMessage-c5395e41/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.2",
                    },
                    "id": "Code",
                    "path": "root/Default/Topic-OnMessage-c5395e41/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic-OnMessage-c5395e41/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Topic-OnMessage-c5395e41/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Topic-OnMessage-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Topic-OnMessage-c5395e41/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Topic-OnMessage-c5395e41/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Topic-OnMessage-c5395e41",
                "path": "root/Default/Topic-OnMessage-c5395e41",
              },
              "Topic-OnMessageHandler-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "id": "Topic-OnMessageHandler-c5395e41",
                "path": "root/Default/Topic-OnMessageHandler-c5395e41",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Topic-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
